--- a/boot_project_opendata/src/main/resources/application.properties
+++ b/boot_project_opendata/src/main/resources/application.properties
@@ -64,3 +64,6 @@ logging.level.org.springframework.web.servlet.view=DEBUG
 spring.redis.host=localhost
 spring.redis.port=6379
 redis.enabled=true
+
+#스케줄러 false =>비활성화, true =>활성화
+scheduler.enabled=false
